@@ -74,6 +74,22 @@ name|apache
 operator|.
 name|lucene
 operator|.
+name|index
+operator|.
+name|SegmentInfos
+operator|.
+name|FindSegmentsFile
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
 name|search
 operator|.
 name|SearcherManager
@@ -607,13 +623,68 @@ block|{
 try|try
 block|{
 operator|new
+name|FindSegmentsFile
+argument_list|(
+name|directory
+argument_list|)
+block|{
+annotation|@
+name|Override
+specifier|protected
+name|Object
+name|doBody
+parameter_list|(
+name|String
+name|segmentFileName
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+try|try
+block|{
+operator|new
 name|SegmentInfos
 argument_list|()
 operator|.
 name|read
 argument_list|(
 name|directory
+argument_list|,
+name|segmentFileName
 argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|FileNotFoundException
+name|ex
+parameter_list|)
+block|{
+if|if
+condition|(
+operator|!
+name|directory
+operator|.
+name|fileExists
+argument_list|(
+name|segmentFileName
+argument_list|)
+condition|)
+block|{
+throw|throw
+name|ex
+throw|;
+block|}
+comment|/* this is ok - we might have run into a access exception here.              * or even worse like on LUCENE-4870 this is triggered due to              * too many open files on the system. In that case we rather report              * a false positive here since wrongly returning false from indexExist              * can cause data loss since IW relies on this.*/
+block|}
+return|return
+literal|null
+return|;
+block|}
+block|}
+operator|.
+name|run
+argument_list|()
 expr_stmt|;
 return|return
 literal|true
