@@ -22,6 +22,16 @@ name|java
 operator|.
 name|io
 operator|.
+name|FileNotFoundException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
 name|IOException
 import|;
 end_import
@@ -10259,6 +10269,342 @@ name|close
 argument_list|()
 expr_stmt|;
 name|iw
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+comment|// See LUCENE-4870 TooManyOpenFiles errors are thrown as
+comment|// FNFExceptions which can trigger data loss.
+DECL|method|testTooManyFileException
+specifier|public
+name|void
+name|testTooManyFileException
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// Create failure that throws Too many open files exception randomly
+name|MockDirectoryWrapper
+operator|.
+name|Failure
+name|failure
+init|=
+operator|new
+name|MockDirectoryWrapper
+operator|.
+name|Failure
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|MockDirectoryWrapper
+operator|.
+name|Failure
+name|reset
+parameter_list|()
+block|{
+name|doFail
+operator|=
+literal|false
+expr_stmt|;
+return|return
+name|this
+return|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|void
+name|eval
+parameter_list|(
+name|MockDirectoryWrapper
+name|dir
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+if|if
+condition|(
+name|doFail
+condition|)
+block|{
+if|if
+condition|(
+name|random
+argument_list|()
+operator|.
+name|nextBoolean
+argument_list|()
+condition|)
+block|{
+throw|throw
+operator|new
+name|FileNotFoundException
+argument_list|(
+literal|"some/file/name.ext (Too many open files)"
+argument_list|)
+throw|;
+block|}
+block|}
+block|}
+block|}
+decl_stmt|;
+name|MockDirectoryWrapper
+name|dir
+init|=
+name|newMockDirectory
+argument_list|()
+decl_stmt|;
+comment|// The exception is only thrown on open input
+name|dir
+operator|.
+name|setFailOnOpenInput
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|dir
+operator|.
+name|failOn
+argument_list|(
+name|failure
+argument_list|)
+expr_stmt|;
+comment|// Create an index with one document
+name|IndexWriterConfig
+name|iwc
+init|=
+operator|new
+name|IndexWriterConfig
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|,
+operator|new
+name|MockAnalyzer
+argument_list|(
+name|random
+argument_list|()
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|IndexWriter
+name|iw
+init|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|dir
+argument_list|,
+name|iwc
+argument_list|)
+decl_stmt|;
+name|Document
+name|doc
+init|=
+operator|new
+name|Document
+argument_list|()
+decl_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|StringField
+argument_list|(
+literal|"foo"
+argument_list|,
+literal|"bar"
+argument_list|,
+name|Field
+operator|.
+name|Store
+operator|.
+name|NO
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|iw
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+comment|// add a document
+name|iw
+operator|.
+name|commit
+argument_list|()
+expr_stmt|;
+name|DirectoryReader
+name|ir
+init|=
+name|DirectoryReader
+operator|.
+name|open
+argument_list|(
+name|dir
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|ir
+operator|.
+name|numDocs
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|ir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|iw
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+comment|// Open and close the index a few times
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+literal|10
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|failure
+operator|.
+name|setDoFail
+argument_list|()
+expr_stmt|;
+name|iwc
+operator|=
+operator|new
+name|IndexWriterConfig
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|,
+operator|new
+name|MockAnalyzer
+argument_list|(
+name|random
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+try|try
+block|{
+name|iw
+operator|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|dir
+argument_list|,
+name|iwc
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|CorruptIndexException
+name|ex
+parameter_list|)
+block|{
+comment|// Exceptions are fine - we are running out of file handlers here
+continue|continue;
+block|}
+catch|catch
+parameter_list|(
+name|FileNotFoundException
+name|ex
+parameter_list|)
+block|{
+continue|continue;
+block|}
+name|failure
+operator|.
+name|clearDoFail
+argument_list|()
+expr_stmt|;
+name|iw
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|ir
+operator|=
+name|DirectoryReader
+operator|.
+name|open
+argument_list|(
+name|dir
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"lost document after iteration: "
+operator|+
+name|i
+argument_list|,
+literal|1
+argument_list|,
+name|ir
+operator|.
+name|numDocs
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|ir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+comment|// Check if document is still there
+name|failure
+operator|.
+name|clearDoFail
+argument_list|()
+expr_stmt|;
+name|ir
+operator|=
+name|DirectoryReader
+operator|.
+name|open
+argument_list|(
+name|dir
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|ir
+operator|.
+name|numDocs
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|ir
 operator|.
 name|close
 argument_list|()
